// Original file: ../back-rpc/server/api/guest/guest.proto


export interface AddGuestRequest {
  'partyId'?: (number);
  'username'?: (string);
  'email'?: (string);
  'userId'?: (number);
}

export interface AddGuestRequest__Output {
  'partyId': (number);
  'username': (string);
  'email': (string);
  'userId': (number);
}
