// Original file: ../back-rpc/server/api/guest/guest.proto


export interface GuestResponse {
  'id'?: (number);
  'username'?: (string);
  'email'?: (string);
  'present'?: (string);
  'userId'?: (number);
}

export interface GuestResponse__Output {
  'id': (number);
  'username': (string);
  'email': (string);
  'present': (string);
  'userId': (number);
}
